[package]
name = "celescope_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
bio = "1.0.0"
bam = "0.1.4"
subprocess = "0.2.9"
csv = "1.1.6"